external-crates/move/crates/move-compiler/tests/move_check/translated_ir_tests/move/commands/break_outside_loop_in_if.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04014]: invalid loop control
  ┌─ tests/move_check/translated_ir_tests/move/commands/break_outside_loop_in_if.move:3:15
  │
3 │     if (true) break
  │               ^^^^^ Invalid usage of 'break'. 'break' can only be used inside a loop body or lambda
